fixed gaps on profile page when open popup

--- a/src/styles/_followers.scss
+++ b/src/styles/_followers.scss
@@ -2,6 +2,16 @@
 
 .following-page {
 
+  body {
+
+    &:not(.modal-opened) {
+
+      .profile, .myProfile {
+        overflow: hidden;
+      }
+    }
+  }
+
   .sticky-header-controls {
 
     @include media-breakpoint-down($desktop-breakpoint) {
