--- a/src/styles/_profile.scss
+++ b/src/styles/_profile.scss
@@ -2,6 +2,16 @@
 
 .profile-page {
 
+  body {
+
+    &:not(.modal-opened) {
+
+      .profile, .myProfile {
+        overflow: hidden;
+      }
+    }
+  }
+
   .profile,
   .myProfile {
 
